Closed
Bug 458527
Opened 17 years ago
Closed 17 years ago
recently closed pages not tracked until history menu is accessed
Categories
(Camino Graveyard :: History, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Camino2.0
People
(Reporter: ishermandom+bugs, Assigned: stuart.morgan+bugzilla)
Details
Attachments
(1 file)
|
1.23 KB,
patch
|
mikepinkerton
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X 10.4; en; rv:1.9.0.4pre) Gecko/2008092900 Camino/2.0a1pre (like Firefox/3.0.4pre)
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X 10.4; en; rv:1.9.0.4pre) Gecko/2008092900 Camino/2.0a1pre (like Firefox/3.0.4pre)
The new "Recently Closed Pages" addition to the history menu is not populated until the first time the history menu is accessed (after each launch of Camino). This is particularly problematic since I usually first access the history menu when I want to recover an accidentally closed tab!
Reproducible: Always
Steps to Reproduce:
1. Relaunch Camino
2. Navigate to some page
3. Close the page
4. Look at your History: no Recently Closed Pages
5. Navigate to some page
6. Close the page
7. Look at your History: Recently Closed Pages exists, and includes the second page you closed (but not the first)
| Assignee | ||
Comment 1•17 years ago
|
||
Doh! Thanks for noticing this and tracking down what exactly was happening.
Assignee: nobody → stuart.morgan+bugzilla
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Target Milestone: --- → Camino2.0
| Assignee | ||
Comment 2•17 years ago
|
||
I hadn't realized that this path also happened during the lazy-load of the history source.
Attachment #341774 -
Flags: superreview?(mikepinkerton)
Comment 3•17 years ago
|
||
Comment on attachment 341774 [details] [diff] [review]
fix
sr=pink
Attachment #341774 -
Flags: superreview?(mikepinkerton) → superreview+
Landed on cvs trunk for Stuart in advance of a1.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Flags: camino2.0a1+
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•