Bug 458527 - Recently closed pages not tracked until History menu is accessed. Patch by Stuart Morgan <stuart.morgan+bugzilla@gmail.com>, r/sr=pink